// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vcl object should include local files 1`] = `
"body{
  background: red;
}
"
`;

exports[`vcl object should optimize the css 1`] = `"body{color:#00f}"`;

exports[`vcl object should override the default theme 1`] = `
".body {
  background-color: #FFFFFF
}

body {
  color: blue
}

"
`;

exports[`vcl object should return valid css 1`] = `
"body {
  color: blue
}
"
`;

exports[`vcl object should return valid css without any options set 1`] = `
"body {
  color: rgba(204,204,204, .5)
}
"
`;
